--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- <html lang="en"> -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -31,5 +30,6 @@
         <button onclick="calculator()" class="hasil">=</button>
       </div>
     </div>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
