--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         <button onclick="calculator()" class="hasil">=</button>
       </div>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
